fixing comp